[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "openpack"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "openpack"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"lxml",
	"jaraco.collections>=1.3.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jaraco/openpack"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6, != 8.1.1",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",

	# local
]
docs = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[project.scripts]
part-edit = "openpack.editor:part_edit_cmd"
zip-listdir = "openpack.editor:pack_dir_cmd"

[tool.setuptools_scm]
